Updated comments on EJS.

--- a/views/createPost.ejs
+++ b/views/createPost.ejs
@@ -3,6 +3,7 @@
   <div class="hero-overlay bg-opacity-20"></div>
   <div class="text-center text-neutral-content">
     <div>
+      <!-- Form to create a post -->
       <div class="md:card flex-shrink-0 shadow-2xl bg-slate-300">
         <div class="card-body">
           <form action="/post/createPost" enctype="multipart/form-data" method="POST">
