--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 <!-- header image -->
 <div class="profile--header-container"></div>
-
+<!-- Profile bar -->
 <main class="grid grid-cols-7 bg-slate-300">
   <div class="col-start-2" >
     <div class="w-full h-28 md:h-36 bg-slate-300">
@@ -9,6 +9,7 @@
         <div class="w-32 md:w-52 absolute">
           <img class="border-2" src="<%= user.profilePhoto%>"/>
           <h2 class="flex justify-center text-xl md:text-2xl font-bold pt-1"> <%= user.userName.split(" ").map(e => e.charAt(0).toUpperCase()+e.slice(1)).join(' ') %></h2>
+          <!-- Edit profile button -->
           <% if (user.userName == loggedInUser.userName) { %>
           <div class="hidden md:flex justify-center">
             <a href="/profile/getEditProfile"><button class="btn btn-outline mt-4 normal-case text-lg">Edit Profile</button></a>
@@ -21,8 +22,6 @@
       </div>
     </div>
   </div>
-
-
     <div class="col-start-6 lg:col-start-7 flex flex-col my-auto">
         <h5 class='self-center text-2xl font-bold'><%= posts.length%></h5>
         <h5 class='self-center text-lg'>Posts</h5>
@@ -30,6 +29,7 @@
   </main>
  
   <section class="grid grid-cols-9">
+    <!-- User bio -->
     <section class="col-start-1 col-span-9 lg:col-start-2 lg:col-span-2 lg:my-4 m-4" >
       <div class="border border-4 bg-slate-300 p-3 h-56">
         <h3 class="font-extrabold">About:</h3>
@@ -39,12 +39,13 @@
       </div>
     </section>
     
+    <!-- Posts container -->
     <section class="row-start-2 lg:row-start-1 border border-slate-900 col-start-1 col-span-9 lg:col-start-4 lg:col-span-6 grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 lg:gap-4 mx-4 lg:m-4 p-2 lg:p-4">
-      <div class="col-start-1 2xl:col-span-3 md:col-span-2 grid grid-cols-9  mb-4 lg:mb-1">
+      <div class="col-start-1 2xl:col-span-3 md:col-span-2 grid grid-cols-9 mb-4 lg:mb-1">
         <h2 class="col-start-1 text-2xl">Posts:</h2>
         <a class="col-start-6 col-span-4 flex justify-end" href="/post"><button class="btn btn-outline mx-4 normal-case text-lg w-full lg:w-3/5">Add Post</button></a>
       </div>
-      
+      <!-- Posts -->
       <% for(var i=0; i<posts.length; i++) {%>
       <div class="card card-compact w-fit bg-slate-100 shadow-xl mb-4">
         <figure class="h-60 lg:h-72"><a href="/post/<%= posts[i]._id%>"><img src="<%= posts[i].image%>" alt="Shoes" /></a></figure>
@@ -69,7 +70,7 @@
               <%}%>
             </div>
           </div>
-           <!-- outer div -->
+           <!-- Trash can shows if the logged if user is on their own profile -->
       <div class="flex flex-row justify-center gap-4 sm:self-end">
           <%if(posts[i].user.userName == loggedInUser.userName){ %>
           
@@ -91,7 +92,7 @@
             >
               <button class="btn fa fa-trash bg-slate-900" type="submit"></button>
             </form>
-
+        <!-- Trash can does not show if logged in user is on another user's profile -->
         <% } else {%>   
           
             <form
