--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,6 +4,8 @@
   <div class="hero-overlay bg-opacity-20"></div>
   <div class="hero-content text-center text-neutral-content">
     <div class="max-w-md">
+      
+      <!-- Sign up -->
       <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-slate-300">
         <div class="card-body">
           <form action="/signup" method="POST">
@@ -34,7 +36,7 @@
             <label class="label">
               <span class="label-text">Confirm Password</span>
             </label>
-            <input type="password" placeholder="confirm password" class="input input-bordered" id="confirmPassword" name="confirmPassword"/>
+            <input type="password" placeholder="confirm password" class="input input-bordered text-black" id="confirmPassword" name="confirmPassword"/>
           </div>
 
           <div class="form-control mt-3">
