--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,7 @@
   <div class="hero-content text-center text-neutral-content">
     <div class="max-w-md">
       
+      <!-- Login -->
       <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-slate-300">
         <form action="/login" method="POST">
         <div class="card-body">
@@ -25,6 +26,7 @@
           <div class="form-control mt-3">
             <button type="submit" class="btn btn-grey">Login</button>
           </div>
+          <!-- Error messages -->
           <section class="">
             <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
             <div class="alert alert-danger bg-slate-300 text-red-600"><%= el.msg %></div>
@@ -33,7 +35,7 @@
             messages.info.forEach( el => { %>
             <div class="alert alert-info"><%= el.msg %></div>
             <% }) %> <% } %>
-            </section>      
+          </section>      
         </form>
         </div>
       </div>
