Updated comments on EJS.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <!-- Nav on screens below large. -->
+    <!-- Nav on large screens. -->
     <div class=" bg-slate-900 text-white hidden lg:navbar">
       <% if (loggedInUser == undefined) { %>
       <div class="flex-1 sm:break-inside-auto">
@@ -68,7 +68,7 @@
       </div>
     </div>
     
-<!-- Nav on large and above screens. -->
+<!-- Nav on below large screens. -->
     <div class="navbar bg-slate-900 text-white lg:hidden">
       <% if (loggedInUser == undefined) { %>
       <div class="flex-1">
